--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.544.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "react-hook-form": "^7.63.0",
     "react-router-dom": "^7.9.1",
     "tailwind-merge": "^3.3.1"
   },
